--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
 	<meta charset="UTF-8" />
-	<title>Phaser - Making your first game, part 1</title>
+	<title>GeekHubs Hackathon!!!!</title>
     <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
     <style type="text/css">
         body {
@@ -17,6 +17,8 @@
 var game = new Phaser.Game(800,600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 
 function preload() {
+
+
 }
 
 function create() {
