--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta charset="UTF-8" />
 	<title>GeekHubs Hackathon!!!!</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+    <script src="js/phaser.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -16,15 +16,105 @@
 
 var game = new Phaser.Game(800,600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 
+var player;
+var platforms;
+var cursors;
+var stars;
+
 function preload() {
 
+	//Cargamos los assets
+ 	game.load.image('sky', 'assets/sky.png');
+    game.load.image('ground', 'assets/platform.png');
+    game.load.image('star', 'assets/star.png');
+    game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
 
 }
 
 function create() {
+	//Cargamos las fisicas arcade para nuestro videojuego
+	game.physics.startSystem(Phaser.Physics.ARCADE);
+
+	//Añadimos el sprite de fondo
+	game.add.sprite(0, 0, 'sky');
+
+	//Creamos el grupo de plataformas
+    platforms = game.add.group();
+
+    //Le damos propiedades de cuerpo al grupo plataformas
+    platforms.enableBody = true;
+
+    // Creamos la variable ground que contendrá las plataformas.
+    var ground = platforms.create(0, game.world.height - 64, 'ground');
+
+    // Escalamos el original
+    ground.scale.setTo(2, 2);
+
+    // Hacemos que no se pueda mover para que no caiga y se mantenga fijo
+    ground.body.immovable = true;
+
+    //  Creamos dos plataformas
+    var ledge = platforms.create(400, 400, 'ground');
+    ledge.body.immovable = true;
+
+    var ledge2 = platforms.create(-150, 250, 'ground');
+    ledge.body.immovable = true;
+
+    //Creamos al personaje jugador
+    player = game.add.sprite(32, game.world.height - 150, 'dude');
+
+    //Creamos las fisicas del personaje
+    game.physics.arcade.enable(player);
+
+    // Caracteristicas fisicas del personaje
+    player.body.bounce.y = 0.2;
+    player.body.gravity.y = 300;
+    player.body.collideWorldBounds = true;
+
+    //  Animaciones.
+    player.animations.add('left', [0, 1, 2, 3], 10, true);
+    player.animations.add('right', [5, 6, 7, 8], 10, true);
+
+    //Controles por teclado
+     cursors = game.input.keyboard.createCursorKeys();
+
 }
 
 function update() {
+
+	 //  Colisiones de jugador y plataformas
+    game.physics.arcade.collide(player, platforms);
+
+    //  Player en estatico
+    player.body.velocity.x = 0;
+
+    if (cursors.left.isDown)
+    {
+        //  Movemos a la izquierda
+        player.body.velocity.x = -150;
+
+        player.animations.play('left');
+    }
+    else if (cursors.right.isDown)
+    {
+        //  Movemos a la drecha
+        player.body.velocity.x = 150;
+
+        player.animations.play('right');
+    }
+    else
+    {
+        //  Estatico
+        player.animations.stop();
+
+        player.frame = 4;
+    }
+    
+    //  Permitimos el salto
+    if (cursors.up.isDown && player.body.touching.down)
+    {
+        player.body.velocity.y = -350;
+    }
 }
 
 </script>
