--- a/index2.html
+++ b/index2.html
@@ -2,8 +2,8 @@
 <html lang="en"> 
 <head> 
 	<meta charset="UTF-8" />
-	<title>Phaser - Making your first game, part 1</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+	<title>GeekHubs Hackathon!!!!</title>
+    <script src="js/phaser.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -14,15 +14,181 @@
 
 <script type="text/javascript">
 
-var game = new Phaser.Game(272,484, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+var game = new Phaser.Game(800,600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+
+var player;
+var platforms;
+var cursors;
+var stars;
+
+//Tiro
+var bullets;
+var bullet;
+var bulletTime = 0;
+
+var direccion = 0;
 
 function preload() {
+
+	//Cargamos los assets
+ 	game.load.image('sky', 'assets/sky.png');
+    game.load.image('ground', 'assets/platform.png');
+    game.load.image('star', 'assets/star.png');
+    game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
+	game.load.image('bala','assets/bala.png');
+
 }
 
 function create() {
+	//Cargamos las fisicas arcade para nuestro videojuego
+	game.physics.startSystem(Phaser.Physics.ARCADE);
+
+	//Añadimos el sprite de fondo
+	game.add.sprite(0, 0, 'sky');
+
+	//Creamos el grupo de plataformas
+    platforms = game.add.group();
+
+    //Le damos propiedades de cuerpo al grupo plataformas
+    platforms.enableBody = true;
+
+    // Creamos la variable ground que contendrá las plataformas.
+    var ground = platforms.create(0, game.world.height - 64, 'ground');
+
+    // Escalamos el original
+    ground.scale.setTo(2, 2);
+
+    // Hacemos que no se pueda mover para que no caiga y se mantenga fijo
+    ground.body.immovable = true;
+
+    //  Creamos dos plataformas
+    var ledge = platforms.create(400, 400, 'ground');
+    ledge.body.immovable = true;
+
+    var ledge2 = platforms.create(-150, 250, 'ground');
+    ledge.body.immovable = true;
+
+    //Creamos al personaje jugador
+    player = game.add.sprite(32, game.world.height - 150, 'dude');
+
+    //Creamos las fisicas del personaje
+    game.physics.arcade.enable(player);
+
+    // Caracteristicas fisicas del personaje
+    player.body.bounce.y = 0.2;
+    player.body.gravity.y = 300;
+    player.body.collideWorldBounds = true;
+
+    //  Animaciones.
+    player.animations.add('left', [0, 1, 2, 3], 10, true);
+    player.animations.add('right', [5, 6, 7, 8], 10, true);
+
+    //Controles por teclado
+     cursors = game.input.keyboard.createCursorKeys();
+
+	 game.input.keyboard.addKeyCapture([ Phaser.Keyboard.SPACEBAR ]);
+	 /* Balas */
+	
+	bullets = game.add.group();
+    bullets.enableBody = true;
+    bullets.physicsBodyType = Phaser.Physics.ARCADE;
+	 bullets.createMultiple(30, 'bala');
+    /*for (var i = 0; i < 20; i++)
+    {
+        var b = bullets.create(0, 0, 'bala');
+        b.name = 'bala' + i;
+        b.exists = false;
+        b.visible = false;
+        b.checkWorldBounds = true;
+        b.events.onOutOfBounds.add(resetBullet, this);
+    }*/
 }
 
 function update() {
+
+	 //  Colisiones de jugador y plataformas
+    game.physics.arcade.collide(player, platforms);
+	player.body.checkCollision.up = false;
+	//game.physics.arcade.collide(bullets, platforms);
+	
+	 game.physics.arcade.collide(bullets, platforms,destroyBullet);
+    //  Player en estatico
+    player.body.velocity.x = 0;
+
+    if (cursors.left.isDown)
+    {
+        //  Movemos a la izquierda
+        player.body.velocity.x = -150;
+		
+		//AÑADIR
+		direccion = -1;
+
+        player.animations.play('left');
+    }
+    else if (cursors.right.isDown)
+    {
+        //  Movemos a la drecha
+        player.body.velocity.x = 150;
+		
+		//AÑADIR
+		direccion = 1;
+
+        player.animations.play('right');
+    }
+    else
+    {
+        //  Estatico
+        player.animations.stop();
+		
+		//AÑADIR
+		direccion = 0;
+		
+        player.frame = 4;
+    }
+    
+    //  Permitimos el salto
+    if (cursors.up.isDown && player.body.touching.down)
+    {
+        player.body.velocity.y = -350;
+    }
+	
+	// Disparar
+	if (game.input.keyboard.isDown(Phaser.Keyboard.SPACEBAR) && direccion != 0)
+    {
+        fireBullet();
+    }
+}
+
+	function destroyBullet(bullet,platforms) {
+		bullet.kill();
+	}
+
+	//metodo de disparo
+	function fireBullet () {
+
+    if (game.time.now > bulletTime)
+    {
+        bullet = bullets.getFirstExists(false);
+
+        if (bullet)
+        {
+            bullet.reset(player.x + 6, player.y - 8);
+			if (direccion == -1)
+				bullet.body.velocity.x = -300;
+			else if (direccion == 1)
+				bullet.body.velocity.x = 300;
+            bulletTime = game.time.now + 150;
+        }
+    }
+}
+
+	
+	
+	//  Called if the bullet goes out of the screen
+function resetBullet (bullet) {
+
+    bullet.kill();
+
 }
 
 </script>
