--- a/index2.html
+++ b/index2.html
@@ -1,22 +1,51 @@
-<!doctype html> 
-<html lang="en"> 
-<head> 
+<!doctype html>
+<html lang="en">
+<head>
 	<meta charset="UTF-8" />
-	<title>GeekHubs Hackathon!!!!</title>
+	<title>Phaser - Making your first game, part 1</title>
     <script src="js/phaser.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
         }
+		#game {
+			/*min-height: 10em;*/
+			min-height: 2em;
+   			position: relative;
+		}
+		.wrapper {
+			margin: 0;
+   			position: absolute;
+   			top: 50%;
+   			transform: translate(0, -50%);
+		}
+
+		canvas {
+
+			/*margin: 0;
+   			position: absolute;
+   			top: 50%;
+   			transform: translate(0, -50%);*/
+
+
+			margin-left: auto;
+    		margin-right: auto;
+    		width: 800px;
+
+
+		}
+
     </style>
 </head>
 <body>
-
+<div id="game">
+	<div class="wrapper">
 <script type="text/javascript">
 
 var game = new Phaser.Game(800,600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 
 var player;
+var background;
 var platforms;
 var cursors;
 var stars;
@@ -26,15 +55,19 @@ var bullets;
 var bullet;
 var bulletTime = 0;
 
-var direccion = 0;
+var direccion = 1;
+
+var apuntando = false;
+var abajo = false;
+var arriba = false;
 
 function preload() {
 
 	//Cargamos los assets
- 	game.load.image('sky', 'assets/sky.png');
+ 	game.load.image('fondo', 'assets/sky.png');
     game.load.image('ground', 'assets/platform.png');
     game.load.image('star', 'assets/star.png');
-    game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
+    game.load.spritesheet('monigote', 'assets/monigoteLados.png', 38, 48);
 	game.load.image('bala','assets/bala.png');
 
 }
@@ -44,7 +77,7 @@ function create() {
 	game.physics.startSystem(Phaser.Physics.ARCADE);
 
 	//Añadimos el sprite de fondo
-	game.add.sprite(0, 0, 'sky');
+	game.add.sprite(0, 0, 'fondo');
 
 	//Creamos el grupo de plataformas
     platforms = game.add.group();
@@ -69,7 +102,7 @@ function create() {
     ledge.body.immovable = true;
 
     //Creamos al personaje jugador
-    player = game.add.sprite(32, game.world.height - 150, 'dude');
+    player = game.add.sprite(32, game.world.height - 150, 'monigote');
 
     //Creamos las fisicas del personaje
     game.physics.arcade.enable(player);
@@ -80,28 +113,20 @@ function create() {
     player.body.collideWorldBounds = true;
 
     //  Animaciones.
-    player.animations.add('left', [0, 1, 2, 3], 10, true);
-    player.animations.add('right', [5, 6, 7, 8], 10, true);
+    player.animations.add('left', [17, 19, 21, 23,25,27], 10, true);
+    player.animations.add('right', [16,18,20,22,24,26], 10, true);
 
     //Controles por teclado
      cursors = game.input.keyboard.createCursorKeys();
 
 	 game.input.keyboard.addKeyCapture([ Phaser.Keyboard.SPACEBAR ]);
+	 game.input.keyboard.addKeyCapture([ Phaser.Keyboard.G ]);
 	 /* Balas */
 	
 	bullets = game.add.group();
     bullets.enableBody = true;
     bullets.physicsBodyType = Phaser.Physics.ARCADE;
-	 bullets.createMultiple(30, 'bala');
-    /*for (var i = 0; i < 20; i++)
-    {
-        var b = bullets.create(0, 0, 'bala');
-        b.name = 'bala' + i;
-        b.exists = false;
-        b.visible = false;
-        b.checkWorldBounds = true;
-        b.events.onOutOfBounds.add(resetBullet, this);
-    }*/
+	bullets.createMultiple(30, 'bala');
 }
 
 function update() {
@@ -109,13 +134,59 @@ function update() {
 	 //  Colisiones de jugador y plataformas
     game.physics.arcade.collide(player, platforms);
 	player.body.checkCollision.up = false;
-	//game.physics.arcade.collide(bullets, platforms);
 	
 	 game.physics.arcade.collide(bullets, platforms,destroyBullet);
     //  Player en estatico
     player.body.velocity.x = 0;
-
-    if (cursors.left.isDown)
+	
+	if (game.input.keyboard.isDown(Phaser.Keyboard.G)) {
+		apuntando = true;
+	}
+	else {
+	apuntando = false;
+	abajo = false;
+	arriba = false;
+	}
+		
+		
+	if (cursors.down.isDown && player.body.touching.down) {
+		abajo = true;
+		arriba = false;
+		if (direccion == 1) {
+			if(apuntando && cursors.right.isDown && cursors.up.isDown)
+				player.frame = 30;
+			else if (apuntando && cursors.right.isDown && cursors.down.isDown)
+				player.frame = 32;
+			else
+				player.frame = 28;
+		}
+			
+		else if (direccion == -1)
+			if(apuntando && cursors.left.isDown && cursors.up.isDown)
+				player.frame = 31;
+			else if (apuntando && cursors.left.isDown && cursors.down.isDown)
+				player.frame = 33;
+			else
+				player.frame = 29;
+		player.animations.stop();
+	}
+	else if (!abajo) {
+	if (!player.body.touching.down)
+    {
+		player.animations.stop();
+		if (cursors.right.isDown) {
+			player.body.velocity.x = 150;
+			player.frame = 8;
+			direccion = 1;
+		}
+		else if (cursors.left.isDown) {
+			player.body.velocity.x = -150;
+			player.frame = 9;
+			direccion = -1;
+		}
+			
+    }
+    else if (cursors.left.isDown && apuntando == false)
     {
         //  Movemos a la izquierda
         player.body.velocity.x = -150;
@@ -125,9 +196,9 @@ function update() {
 
         player.animations.play('left');
     }
-    else if (cursors.right.isDown)
+    else if (cursors.right.isDown && apuntando == false)
     {
-        //  Movemos a la drecha
+        //  Movemos a la derecha
         player.body.velocity.x = 150;
 		
 		//AÑADIR
@@ -139,19 +210,21 @@ function update() {
     {
         //  Estatico
         player.animations.stop();
-		
-		//AÑADIR
-		direccion = 0;
-		
-        player.frame = 4;
+		if (direccion == 1)
+			player.frame = 0;
+		else if (direccion == -1)
+			player.frame = 1;
+		else 
+			direccion = 0;
     }
-    
+	}
+	
+	
     //  Permitimos el salto
-    if (cursors.up.isDown && player.body.touching.down)
+	if (cursors.up.isDown && player.body.touching.down && !apuntando)
     {
         player.body.velocity.y = -350;
-    }
-	
+	}
 	// Disparar
 	if (game.input.keyboard.isDown(Phaser.Keyboard.SPACEBAR) && direccion != 0)
     {
