Correct background state

--- a/index3.html
+++ b/index3.html
@@ -65,7 +65,7 @@ function preload() {
 	game.load.image('back0', 'assets/mapa1_capafondo.png');
 	game.load.image('back1', 'assets/mapa1_capajuego.png');
     game.load.image('star', 'assets/star.png');
-	game.load.image('statsBackground', 'assets/statsBackground_.png');
+	game.load.image('statsBackground', 'assets/statsBackground.png');
     game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
 	game.load.spritesheet('heads', 'assets/heads3.png', 35, 35);
 	game.load.spritesheet('iconsStats', 'assets/miniicons.png', 5, 5);
